--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "prop-types": "^15.5.10",
+    "react-redux": "^5.0.5",
     "react-scripts": "1.0.7"
   },
   "scripts": {
