--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.5.10",
     "react-redux": "^5.0.5",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
